force-app/main/default/objects/Driver__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18 - 25</fullName>
            </value>
            <value>
                <fullName>25 - 36</fullName>
            </value>
            <value>
                <fullName>36 - 45</fullName>
            </value>
            <value>
                <fullName>Above 45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>