force-app/main/default/objects/Driver__c/fields/Discont__c.field-meta.xml
<CustomField>
    <fullName>Discont__c</fullName>
    <label>Discont</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>