force-app/main/default/objects/Driver__c/fields/Liscence_No__c.field-meta.xml
<CustomField>
    <fullName>Liscence_No__c</fullName>
    <label>Liscence No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>